--- a/package.json
+++ b/package.json
@@ -10,19 +10,26 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.3.1",
+    "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-avatar": "^1.1.0",
+    "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
+    "@xixixao/uploadstuff": "^0.0.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "convex": "^1.14.1",
+    "embla-carousel-react": "^8.1.8",
     "lucide-react": "^0.427.0",
     "next": "14.2.5",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
     "react-error-boundary": "^4.0.13",
+    "react-hook-form": "^7.52.2",
     "sonner": "^1.5.0",
     "svix": "^1.29.0",
     "tailwind-merge": "^2.5.2",
