--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "^18",
     "react-error-boundary": "^4.0.13",
     "react-hook-form": "^7.52.2",
+    "react-intersection-observer": "^9.13.0",
     "sonner": "^1.5.0",
     "svix": "^1.29.0",
     "tailwind-merge": "^2.5.2",
